# Translator

./: README.md
app/: .gitignore  electron-builder.yml  package.json  pyproject.toml  requirements.txt
app/src/main/: index.ts
app/src/main/backend/transcription/: speechToTextPy.py
app/src/main/backend/translator/: textTranslator.ts
app/src/preload/: index.ts
app/src/renderer/: index.html
app/src/renderer/src/: App.tsx
app/src/renderer/src/assets/: Modal.tsx
app/src/renderer/src/assets/tutorialImages/: addNewSubscription.avif  createResourceGroup1.avif  createResourceGroup2.avif  createSubscription1.avif  deepgramAPIKEY.avif  pickTranslatorAPIKey.avif  selectPricingTierForTranslator.avif  selectTranslatorProduct.avif
app/src/renderer/src/components/menu/: SelectMenu.tsx
app/src/renderer/src/globalTypes/: globalApi.d.ts
app/src/renderer/src/pages/translationOverlay/: TranslationOverlay.tsx
app/src/renderer/src/pages/translator/: TranslatorPage.tsx
app/src/renderer/src/pages/translator/components/audioTranslator/: PCAudioTranslator.tsx
app/src/renderer/src/pages/translator/components/audioTranslator/assets/: AppSettings.tsx  TranslatorController.tsx  TranslatorTextarea.tsx  TranslatorTutorial.tsx  ZoomableImage.tsx
