[project]
name = "translator"
version = "2.0.0"
description = "Translator App, using Deepgram transcriptions, Azure AI Translations and Voicemeeter to capture audio from Output Audio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepgram-sdk>=3.10.1",
    "pyaudiowpatch>=0.2.12.7",
]
