[project]
name = "translator"
version = "2.0.0"
description = "Translator App, using Deepgram transcriptions, Azure AI Translations and PyAudio to capture audio from Output Audio or Microphone"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "deepgram-sdk>=3.10.1",
    "pyaudiowpatch>=0.2.12.7",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
